@@ -4,6 +4,7 @@ import net.minecraft.item.Item;
 import net.silentchaos512.lib.registry.IRegistrationHandler;
 import net.silentchaos512.lib.registry.SRegistry;
 import net.silentchaos512.scalinghealth.item.ItemCrystalShard;
+import net.silentchaos512.scalinghealth.item.ItemDifficultyChanger;
 import net.silentchaos512.scalinghealth.item.ItemHealing;
 import net.silentchaos512.scalinghealth.item.ItemHeartContainer;
 import net.silentchaos512.scalinghealth.item.ItemHeartDust;
@@ -14,6 +15,7 @@ public class ModItems implements IRegistrationHandler<Item> {
   public static ItemCrystalShard crystalShard = new ItemCrystalShard();
   public static ItemHeartDust heartDust = new ItemHeartDust();
   public static ItemHealing healingItem = new ItemHealing();
+  public static ItemDifficultyChanger difficultyChanger = new ItemDifficultyChanger();
 
   @Override
   public void registerAll(SRegistry reg) {
@@ -22,5 +24,6 @@ public class ModItems implements IRegistrationHandler<Item> {
     reg.registerItem(crystalShard);
     reg.registerItem(heartDust);
     reg.registerItem(healingItem);
+    reg.registerItem(difficultyChanger);
   }
 }
