@@ -1,0 +1,7 @@
+{
+  "parent": "item/generated",
+  "textures": {
+    "layer0": "scalinghealth:items/difficulty_changer_down"
+  }
+}
+
