@@ -1,4 +1,5 @@
 1.3.6
+Added: Items that change difficulty (Cursed Heart and Enchanted Heart). They still need some polishing, but are functional. No recipes are included, you will need to make your own. (#57)
 Changed: Slimes (including magma cubes and probably most modded slimes) now drop far fewer hearts.
 Fixed: Entity lists not matching mod entities (#61)
 
